[gd_scene load_steps=4 format=2]

[ext_resource path="res://theme/kenny/kenneyUI-yellow.tres" type="Theme" id=1]
[ext_resource path="res://main_scene/main.gd" type="Script" id=3]

[sub_resource type="Animation" id=2]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="Menu" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -360.0
margin_right = 640.0
margin_bottom = 360.0
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
color = Color( 0, 0, 0, 0 )

[node name="Fade" type="AnimationPlayer" parent="ColorRect"]
root_node = NodePath("../..")
anims/fade_in = SubResource( 2 )

[node name="VBox" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -158.0
margin_top = -111.5
margin_right = 158.0
margin_bottom = 111.5
custom_constants/separation = 100

[node name="EnBtn" type="Button" parent="VBox"]
margin_right = 316.0
margin_bottom = 61.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "English"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChBtn" type="Button" parent="VBox"]
margin_top = 161.0
margin_right = 316.0
margin_bottom = 223.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "中文"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="animation_finished" from="ColorRect/Fade" to="." method="_on_Fade_animation_finished"]
[connection signal="pressed" from="VBox/EnBtn" to="." method="_on_EnBtn_pressed"]
[connection signal="pressed" from="VBox/ChBtn" to="." method="_on_ChBtn_pressed"]
